# attribute-aware-rbfs

./: .gitignore  .gitmodules  CMakeLists.txt  ColorMap.h  accelerationUtils.h  animations.py  bvhBuilder.cpp  bvhBuilder.h  dda.hlsli  deviceCode.hlsl  deviceCodeBounds.hlsl  deviceCodeCommon.hlsl  deviceCodeOptimizeTree.hlsl  deviceCodeRBF.hlsl  deviceCodeRaster.hlsl  deviceCodeSplat.hlsl  deviceCodeVoxel.hlsl  generateFibonacciSphere.h  hilbert.h  hostCode.cpp  importParticles.h  kdTreeBuilder.cpp  kdTreeBuilder.h  kdTreebuilder.cpp  manim.cfg  memory.cpp  memory.h  rng.h  sharedCode.h  timer.h
importers/: arborx.h  file_mapping.cpp  import_arborx.h  import_cosmo.h  import_genericio.h  import_mmpld.h  import_points.h  import_vtk.cpp  import_vtk.h
scripts/: gen_data.ipynb  poisson_disc.py
scripts/benchmark/: _template.ini  _template.sh  boiler.ini  boiler.sh  cabana.ini  cabana.sh  cosmology.ini  cosmology.sh  injection_d50_Tin0.95.ini  injection_d50_Tin0.95.sh  plot.py  viscus.ini  viscus.sh
